<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sri_bringup</name>
  <version>0.0.0</version>
  <description>Package containing launch and run-time configurations for Sunrise Instruments Force/Torque Sensors</description>
  <maintainer email="zixingjiang@outlook.com">zixingjiang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>sri_description</exec_depend>
  <exec_depend>sri_hardware</exec_depend>
  <exec_depend>urdf</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
